--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 -NoNewline
 MONGODB_URI=mongodb://localhost:27017/iot-waste-segregator
-CLIENT_URL=http://localhost:3000
+CLIENT_URL=https://pixel-bin.vercel.app/
 JWT_SECRET=super-secret-change-me
 NODE_ENV=development
 JWT_EXPIRE=7d
