--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://pix-bin-81s9.onrender.com/"
 }
